# 3D-Rubiks-Cube

./: CMakeLists.txt  LICENSE  Outline.md  README.md  RubiksCube.pkg  RubiksCube_Installer.pkg  main.cpp  make.sh  run.sh
include/glad/: glad.h
pkg_build/: distribution.xml
pkg_build/RubiksCube/Applications/RubiksCube/: RubiksCube
pkg_build/resources/: license.html  welcome.html
src/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  Shader.cpp  Shader.h  glad.c  main.cpp  shader.frag
